--- a/views/resubmit/index.ejs
+++ b/views/resubmit/index.ejs
@@ -12,7 +12,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="shortcut icon" type="image/png" href="https://cdn.glitch.com/3f2aa87c-0707-4d16-b533-62cb0b69db35%2FDiscord%20Bot%20List%20Icon%20-%20Large%202.png?1543200818856" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="/edit/script.js"></script>
+    <script src="/add/script.js"></script>
     <script src="/main/script.js"></script>
     <link href="/main.css" rel="stylesheet">
     <title>Discord Bots</title>
@@ -47,7 +47,7 @@
     <div id="content">
 
         <span class="header">
-        <h1>Edit <%= bot.name %></h1>
+        <h1>Resubmit <%= bot.name %></h1>
         <p>You can edit your bot or find your bot auth details below.</p>
       </span>
         <br>
@@ -85,13 +85,9 @@
             <a class="button" onclick="submit()">Submit</a>
             <br>
         </form>
-        <hr />
-        <span class="center">
-        <a href="#" id="auth" style="margin-right: 10px;">Authorization token</a>
-        <a href="#" id="reset">Reset Authorization token</a>
-      </span>
 
     </div>
+
 </body>
 
 </html>
