--- a/views/search/index.ejs
+++ b/views/search/index.ejs
@@ -12,7 +12,6 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="shortcut icon" type="image/png" href="https://cdn.glitch.com/3f2aa87c-0707-4d16-b533-62cb0b69db35%2FDiscord%20Bot%20List%20Icon%20-%20Large%202.png?1543200818856" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="script.js"></script>
     <script src="/main/script.js"></script>
     <link href="/main.css" rel="stylesheet">
     <title>Discord Bots</title>
@@ -26,14 +25,8 @@
           
           <a href="/"><span class="navtext">Discord Bot List</span></a>
         <svg class="arrow" viewbox="0 0 18 35" xmlns="http://www.w3.org/2000/svg"><g id="Symbols" fill="none" fill-rule="evenodd"><g id="community/header" fill="#3369E6"><g id="Group-13"><g id="Group-2"><path id="Combined-Shape-Copy" d="M1.8537 34.7643l15.5597-17.268L1.8537 0H0l15.5597 17.4964L0 34.7644z"></path></g></g></g></g></svg>
-
-        <a class="navtext active-navtext" target="_blank" href="#">Add Bot</a>
         </span>
         </span>
-        <a class="navtag search" id="searcher" href="/search/">
-            <img id="searchimg" src="/search.png" width="26px" height="26px">
-            <div class="navtext" id="search">Search</div>
-        </a>
         <span class="dropdown">
         <a class="navtag" id="login" href="/api/discord/login">Login</a>
         <span class="dd-content">
@@ -44,49 +37,49 @@
         </span>
         </span>
     </div>
+
+
     <div id="content">
 
         <span class="header">
-        <h1>Add your bot</h1>
-        <p>Fill in these details and hit that button. Make sure you're in the server.</p>
-      </span>
+        <h1>Search</h1>
+        <p><span class="strikethrough">Just another bot list for Discord.</span></p>
+        </span>
         <br>
-        <form class="center">
-            <div class="input-holder">
-                <input class="input" id="botid" type="text" placeholder=" " required="true">
-                <div class="placeholder">Client ID</div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <input class="input" id="prefix" type="text" placeholder=" ">
-                <div class="placeholder">Prefix</div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <input maxlength="120" class="input" id="short" type="text" placeholder=" ">
-                <div class="placeholder">Short Description</div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <input class="input" id="invite" type="text" placeholder=" ">
-                <div class="placeholder">Custom Invite Link</div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <textarea class="input" id="longdesc" rows="7"></textarea>
-                <div class="textarea-placeholder">Long Description - Supports <a target="_blank" href="https://guides.github.com/features/mastering-markdown/">Markdown</a></div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <input class="input xinput" id="owners" type="text" placeholder=" ">
-                <div class="placeholder">Additional Owner IDs</div>
-            </div>
-            <br>
-            <a class="button" id="submit" onclick="submit()">Submit</a>
-        </form>
-        <br>
+        <div class="input-holder">
+            <input class="input" id="searchbar" type="text" placeholder=" ">
+            <div class="placeholder">Search</div>
+        </div>
 
+        <div id="cards">
+            <% if (cards.length === 0) { %>
+                <br> No bots found. Try searching for something else.
+                <% } else { %>
+
+                    <% for(let i of cards) { %>
+                        <div class="card">
+                            <img src="<%= i.logo %>" class="icon">
+                            <h2 class="title">
+                                <%= i.name %>
+                            </h2>
+                            <p class="desc">
+                                <%= i.description %>
+                            </p>
+                            <a href="/bots/<%= i.id %>/" class="small button">View bot info</a>
+                        </div>
+                        <% } %>
+
+                            <% } %>
+        </div>
     </div>
+    <script>
+        const node = document.getElementById("searchbar");
+        node.addEventListener("keyup", function(event) {
+            if (event.key === "Enter") {
+                location.href = `/search/?q=${node.value}`
+            }
+        });
+    </script>
 </body>
 
 </html>
