--- a/views/user/me.ejs
+++ b/views/user/me.ejs
@@ -12,8 +12,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="shortcut icon" type="image/png" href="https://cdn.glitch.com/3f2aa87c-0707-4d16-b533-62cb0b69db35%2FDiscord%20Bot%20List%20Icon%20-%20Large%202.png?1543200818856" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="script.js"></script>
     <script src="/main/script.js"></script>
+    <script src="/user/script.js"></script>
     <link href="/main.css" rel="stylesheet">
     <title>Discord Bots</title>
 </head>
@@ -27,13 +27,11 @@
           <a href="/"><span class="navtext">Discord Bot List</span></a>
         <svg class="arrow" viewbox="0 0 18 35" xmlns="http://www.w3.org/2000/svg"><g id="Symbols" fill="none" fill-rule="evenodd"><g id="community/header" fill="#3369E6"><g id="Group-13"><g id="Group-2"><path id="Combined-Shape-Copy" d="M1.8537 34.7643l15.5597-17.268L1.8537 0H0l15.5597 17.4964L0 34.7644z"></path></g></g></g></g></svg>
 
-        <a class="navtext active-navtext" target="_blank" href="#">Add Bot</a>
-        </span>
-        </span>
-        <a class="navtag search" id="searcher" href="/search/">
-            <img id="searchimg" src="/search.png" width="26px" height="26px">
-            <div class="navtext" id="search">Search</div>
+        <a class="navtext active-navtext" target="_blank" href="#">
+            <%= user.tag %>
         </a>
+        </span>
+        </span>
         <span class="dropdown">
         <a class="navtag" id="login" href="/api/discord/login">Login</a>
         <span class="dd-content">
@@ -45,48 +43,43 @@
         </span>
     </div>
     <div id="content">
-
         <span class="header">
-        <h1>Add your bot</h1>
-        <p>Fill in these details and hit that button. Make sure you're in the server.</p>
+        <h1><%= user.username %></h1>
+        <p contenteditable="true" id="bio">You do not have a bio</p>
       </span>
-        <br>
-        <form class="center">
-            <div class="input-holder">
-                <input class="input" id="botid" type="text" placeholder=" " required="true">
-                <div class="placeholder">Client ID</div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <input class="input" id="prefix" type="text" placeholder=" ">
-                <div class="placeholder">Prefix</div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <input maxlength="120" class="input" id="short" type="text" placeholder=" ">
-                <div class="placeholder">Short Description</div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <input class="input" id="invite" type="text" placeholder=" ">
-                <div class="placeholder">Custom Invite Link</div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <textarea class="input" id="longdesc" rows="7"></textarea>
-                <div class="textarea-placeholder">Long Description - Supports <a target="_blank" href="https://guides.github.com/features/mastering-markdown/">Markdown</a></div>
-            </div>
-            <br>
-            <div class="input-holder">
-                <input class="input xinput" id="owners" type="text" placeholder=" ">
-                <div class="placeholder">Additional Owner IDs</div>
-            </div>
-            <br>
-            <a class="button" id="submit" onclick="submit()">Submit</a>
-        </form>
-        <br>
 
+        <a class="button" href="/add">Add a bot</a>
+
+        <div id="cards">
+            <% for(let i of cards) { %>
+                <div class="large card">
+                    <img src="<%= i.logo %>" class="icon">
+                    <h2 class="title">
+                        <%= i.name %>
+                    </h2>
+                    <p class="desc">
+                        <%= i.description %>
+                    </p>
+                    <a href="/bots/<%= i.id %>/" class="small button">View bot</a>
+                    <% if(i.state !== "deleted") { %>
+                        <a href="/edit/<%= i.id %>/" class="small button">Edit bot</a>
+                        <% } else { %>
+                            <a href="/resubmit/<%= i.id %>/" class="small button">Resubmit bot</a>
+                            <% } %>
+                </div>
+                <% } %>
+        </div>
     </div>
+
+    <br>
+
+    <span class="center">
+      <a href="https://discord.gg/PA9EYba">Join Server</a>  |  
+      <a href="/add">Add a bot</a>  |  
+      <a href="/theme">Toggle theme</a>  |  
+      <a href="/logout">Logout</a>
+    </span>
+    <br>
 </body>
 
 </html>
