--- a/views/edit/index.ejs
+++ b/views/edit/index.ejs
@@ -21,7 +21,7 @@
 <body>
     <div id="navTop">
         <span class="nav link" href="/">
-        <a href="/"><img src="https://cdn.glitch.com/3f2aa87c-0707-4d16-b533-62cb0b69db35%2FDiscord%20Bot%20List%20Icon%20-%20Large%202.png?1543200818856"></a>
+        <a href="/"><img src="/logo.png"></a>
         <span class="navtag">
           
           <a href="/"><span class="navtext">Discord Bot List</span></a>
@@ -37,7 +37,7 @@
         <span class="dropdown">
         <a class="navtag" id="login" href="/api/discord/login">Login</a>
         <span class="dd-content">
-          <a href="https://discord.gg/PA9EYba" target="_blank">Join Server</a><br />
+          <a href="/join" target="_blank">Join Server</a><br />
           <a href="/add">Add bot</a><br />
           <a href="/theme">Toggle Theme</a><br />
           <a href="/logout">Logout</a>
