Replace image links with local ones

--- a/views/edit/index.ejs
+++ b/views/edit/index.ejs
@@ -6,11 +6,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Just another bot list for discord..." />
     <meta name="description" content="Just another bot list for discord..." />
-    <meta name="og:image" content="https://cdn.glitch.com/3f2aa87c-0707-4d16-b533-62cb0b69db35%2FDiscord%20Bot%20List%20Icon%20-%20Large%202.png?1543200818856" />
+    <meta name="og:image" content="/assets/logo.png" />
     <meta name="theme-color" content="#d2efe6" />
     <link href="https://fonts.googleapis.com/icon?family=Markazi+Text" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link rel="shortcut icon" type="image/png" href="https://cdn.glitch.com/3f2aa87c-0707-4d16-b533-62cb0b69db35%2FDiscord%20Bot%20List%20Icon%20-%20Large%202.png?1543200818856" />
+    <link rel="shortcut icon" type="image/png" href="/assets/logo.png" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script src="/edit/script.js"></script>
     <script src="/main/script.js"></script>
