Server join link in .env

--- a/views/user/me.ejs
+++ b/views/user/me.ejs
@@ -75,7 +75,7 @@
     <br>
 
     <span class="center">
-      <a href="https://discord.gg/PA9EYba">Join Server</a>  |  
+      <a href="/join">Join Server</a>  |  
       <a href="/add">Add a bot</a>  |  
       <a href="/theme">Toggle theme</a>  |  
       <a href="/logout">Logout</a>
