--- a/views/user/notfound.ejs
+++ b/views/user/notfound.ejs
@@ -43,7 +43,7 @@
         <span class="header">
         <h1>Error</h1>
         <p>User not found</p>
-        <h4>Join the server <a target="_blank" href="https://discord.gg/PA9EYba">here</a></h4>
+        <h4>Join the server <a target="_blank" href="/join">here</a></h4>
       </span>
     </div>
 
