Setup proper database access
Using mongoose to change the entire database system.

--- a/src/Dynamic/search/index.ejs
+++ b/src/Dynamic/search/index.ejs
@@ -63,12 +63,12 @@
                         <div class="card">
                             <img src="<%= i.logo %>" class="icon">
                             <h2 class="title">
-                                <%= i.name %>
+                                <%= i.username %>
                             </h2>
                             <p class="desc">
                                 <%= i.description %>
                             </p>
-                            <a href="/bots/<%= i.id %>/" class="small button">View bot info</a>
+                            <a href="/bots/<%= i.botid %>/" class="small button">View bot info</a>
                         </div>
                         <% } %>
 
