--- a/src/Dynamic/user/index.ejs
+++ b/src/Dynamic/user/index.ejs
@@ -55,7 +55,7 @@
                 <div class="card">
                     <img src="<%= i.logo %>" class="icon">
                     <h2 class="title">
-                        <%= i.name %>
+                        <%= i.username %>
                     </h2>
                     <p class="desc">
                         <%= i.description %>
