--- a/src/Dynamic/bots/index.ejs
+++ b/src/Dynamic/bots/index.ejs
@@ -30,14 +30,14 @@
           <a href="/"><span class="navtext">Discord Bot List</span></a>
         <svg class="arrow" viewbox="0 0 18 35" xmlns="http://www.w3.org/2000/svg"><g id="Symbols" fill="none" fill-rule="evenodd"><g id="community/header" fill="#3369E6"><g id="Group-13"><g id="Group-2"><path id="Combined-Shape-Copy" d="M1.8537 34.7643l15.5597-17.268L1.8537 0H0l15.5597 17.4964L0 34.7644z"></path></g></g></g></g></svg>
 
-        <a href="#"><span class="navtext active-navtext"><%= response.name %></span></a>
+        <a href="#"><span class="navtext active-navtext"><%= bot.username %></span></a>
         <svg class="arrow" viewbox="0 0 18 35" xmlns="http://www.w3.org/2000/svg"><g id="Symbols" fill="none" fill-rule="evenodd"><g id="community/header" fill="#3369E6"><g id="Group-13"><g id="Group-2"><path id="Combined-Shape-Copy" d="M1.8537 34.7643l15.5597-17.268L1.8537 0H0l15.5597 17.4964L0 34.7644z"></path></g></g></g></g></svg>
 
-        <a class="navtext" target="_blank" href="<%= response.invite ? response.invite : `https://discordapp.com/oauth2/authorize?client_id=${response.id}&scope=bot&permissions=0` %>">Invite</a>
+        <a class="navtext" target="_blank" href="<%= bot.invite ? bot.invite : `https://discordapp.com/oauth2/authorize?client_id=${bot.botid}&scope=bot&permissions=0` %>">Invite</a>
 
         <svg class="arrow" viewbox="0 0 18 35" xmlns="http://www.w3.org/2000/svg"><g id="Symbols" fill="none" fill-rule="evenodd"><g id="community/header" fill="#3369E6"><g id="Group-13"><g id="Group-2"><path id="Combined-Shape-Copy" d="M1.8537 34.7643l15.5597-17.268L1.8537 0H0l15.5597 17.4964L0 34.7644z"></path></g></g></g></g></svg>
 
-        <a class="navtext" target="_blank" href="<%= `/api/embed/${response.id}` %>">Embed</a>
+        <a class="navtext" target="_blank" href="<%= `/api/embed/${bot.botid}` %>">Embed</a>
 
         </span>
         </span>
@@ -61,19 +61,19 @@
 
 
     <div id="content">
-        <img id="bot-icon" width="180px" height="180px" style='border-color: <%= bcolour %>' src="<%= response.logo %>?size=256">
+        <img id="bot-icon" width="180px" height="180px" style='border-color: <%= bcolour %>' src="<%= bot.logo %>?size=256">
         <h2 class="right">
-            <%= response.name %>
+            <%= bot.username %>
         </h2>
-        <span class="right"><%= response.servers ? response.servers + " servers" : "" %></span>
+        <span class="right"><%= bot.servers ? bot.servers + " servers" : "" %></span>
         <div class="right" style="margin-top: 20px;">
-            <%= response.description %>
+            <%= bot.description %>
         </div>
-        <div class="right" style="margin-top: 10px;"><strong>Prefix: </strong><code id="prefix"><%= response.prefix %></code></div>
+        <div class="right" style="margin-top: 10px;"><strong>Prefix: </strong><code id="prefix"><%= bot.prefix %></code></div>
         <div id="long">
             <span class="<%= isURL ? '' : 'markdown-body ' %>"> <%- desc %> </span>
         </div>
-        <div id="edit" class="linkx" style="display: none;"> <a target="_blank" href="/edit/<%= response.id %>">Edit</a> </div>
+        <div id="edit" class="linkx" style="display: none;"> <a target="_blank" href="/edit/<%= bot.botid %>">Edit</a> </div>
         <a id="by" href="/user/<%= person.user.id %>">
         <img src="<%=person.user.tag != 'Unknown User'  ? person.user.displayAvatarURL() : '/assets/default-avatar.png' %>" height="30px" />
         <span class="navtext"><%=person.user.tag %></span>
