--- a/src/Dynamic/resubmit/index.ejs
+++ b/src/Dynamic/resubmit/index.ejs
@@ -30,7 +30,7 @@
           <a href="/"><span class="navtext">Discord Bot List</span></a>
         <svg class="arrow" viewbox="0 0 18 35" xmlns="http://www.w3.org/2000/svg"><g id="Symbols" fill="none" fill-rule="evenodd"><g id="community/header" fill="#3369E6"><g id="Group-13"><g id="Group-2"><path id="Combined-Shape-Copy" d="M1.8537 34.7643l15.5597-17.268L1.8537 0H0l15.5597 17.4964L0 34.7644z"></path></g></g></g></g></svg>
 
-        <a class="navtext active-navtext" target="_blank" href="#">Edit <%= bot.name %></a>
+        <a class="navtext active-navtext" target="_blank" href="#">Edit <%= bot.username %></a>
         </span>
         </span>
         <a class="navtag search" id="searcher">
@@ -50,13 +50,13 @@
     <div id="content">
 
         <span class="header">
-        <h1>Resubmit <%= bot.name %></h1>
+        <h1>Resubmit <%= bot.username %></h1>
         <p>You can edit your bot or find your bot auth details below.</p>
       </span>
         <br>
         <form class="center">
             <div class="input-holder">
-                <input class="input" id="botid" type="text" placeholder=" " value="<%= bot.id %>" readonly>
+                <input class="input" id="botid" type="text" placeholder=" " value="<%= bot.botid %>" readonly>
                 <div class="placeholder">Client ID</div>
             </div>
             <br>
