Fixed bot editting

--- a/src/dynamic/edit/index.ejs
+++ b/src/dynamic/edit/index.ejs
@@ -68,7 +68,7 @@
             </div>
             <br>
             <div class="input-holder">
-                <input maxlength="120" class="input" id="short" type="text" placeholder=" " value="<%= bot.description %>">
+                <input maxlength="120" class="input" id="description" type="text" placeholder=" " value="<%= bot.description %>">
                 <div class="placeholder">Short Description</div>
             </div>
             <br>
