Change file structure for ejs files

--- a/src/dynamic/resubmit.ejs
+++ b/src/dynamic/resubmit.ejs
@@ -85,7 +85,7 @@
                 <div class="placeholder">Additional Owner IDs</div>
             </div>
             <br>
-            <a class="button" onclick="submit()">Submit</a>
+            <a class="button" onclick="submit(true)">Submit</a>
             <br>
         </form>
 
