Bug Fix: Link to bots on user profile works now

--- a/src/dynamic/user/index.ejs
+++ b/src/dynamic/user/index.ejs
@@ -60,7 +60,7 @@
                     <p class="desc">
                         <%= i.description %>
                     </p>
-                    <a href="/bots/<%= i.id %>/" class="small button">View bot</a>
+                    <a href="/bots/<%= i.botid %>/" class="small button">View bot</a>
                 </div>
                 <% } %>
         </div>
