--- a/src/dynamic/user/me.ejs
+++ b/src/dynamic/user/me.ejs
@@ -68,22 +68,13 @@
                     <a href="/bots/<%= i.botid %>/" class="small button">View bot</a>
                     <% if(i.state !== "deleted") { %>
                         <a href="/bots/edit/<%= i.botid %>/" class="small half half-left button">Edit bot</a>
-                        <a class="small half half-right button button-red delete" rel="modal:open">Delete bot</a>
+                        <a class="small half half-right button button-red delete">Delete bot</a>
                     <% } else { %>
                         <a href="/bots/resubmit/<%= i.botid %>/" class="small half half-left button">Resubmit</a>
-                        <a href="#confirm" class="small half half-right button button-red delete" rel="modal:open">Delete</a>
+                        <a href="#confirm" class="small half half-right button button-red delete">Delete</a>
                     <% } %>
                 </div>
                 <% } %>
-        </div>
-    </div>
-
-    <div id="confirm" class="modal">
-        <h2>Are you sure you want to delete this bot?</h2>
-        <br>
-        <div class="input-holder small-holder">
-            <input class="input" id="botconfirm" type="text" placeholder=" ">
-            <div class="placeholder">Type <code id="botname">bot</code> to confirm.</div>
         </div>
     </div>
 
